--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "^0.71.3",
     "react-native-axios": "^0.17.1",
     "react-native-elements": "^3.4.3",
+    "react-native-flash-message": "^0.4.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-md5": "^1.0.0",
     "react-native-safe-area-context": "^4.5.0",
